infra/kubernetes/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-service
  namespace: devops-project

spec:
  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
