infra/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: frontend-ingress
  namespace: devops-project

spec:
  rules:
  - http:

      paths:
      - path: /

        pathType: Prefix

        backend:
          service:

            name: frontend-service

            port:
              number: 80
